<resources>
    <string name="app_name">Mi primera app</string>
    <string name="usuarios">Contactos</string>
    <string name="name">Nombre</string>
    <string name="interruptor">Bloquear</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="male">El</string>
    <string name="female">Ella</string>
    <string name="accept_terms_and_conditions">Vender sus datos</string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="como_me_cae">Cómo me cae</string>
    <string name="cuanto_hablamos">Cuánto hablamos</string>
    <string name="contacto_anadido">Contacto añadido correctamente</string>
    <string name="E_CONTACTO_YA_EXISTE">Error, nombre en uso</string>
    <string name="E_CONTACTO_NO_EXISTE">El contacto no existe</string>
    <string name="edit_button">Edit</string>
    <string name="E_NO_HAY_CONTACTOS">No hay contacos disponibles</string>
    <string name="nombre">Nombre</string>
    <string name="puntuacion">Puntuación</string>
    <string name="error_add_contacto">Error al añadir contacto</string>
    <string name="CONTACTO_EDITADO">Contacto editado</string>
    <string name="adding_contacto">Adding contacto</string>
    <string name="contacto_editado">Contacto editado</string>
    <string name="imagen_cara">Imagen de la cara</string>
    <string name="url_imagen_cara">https://thispersondoesnotexist.com/</string>
    <string name="Trabajo">Trabajo</string>
    <string name="Actor">Actor</string>
    <string name="comment">Comment</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="save">Save</string>
    <string name="E_API_CALL">Api call failed</string>
    <string name="E_NOMBRE_VACIO">El nombre del contacto no puede estar vacío</string>
    <string name="listado">listado</string>
    <string name="main">main</string>
    <string name="otra">otra</string>
    <string name="E_DELETE_USER">Error al eliminar el usuario</string>
</resources>